<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">会计师</string>
    <string name="string_tab_bar_message">业内消息</string>
    <string name="string_tab_bar_workspace">我的工作台</string>
    <string name="string_tab_bar_information">我的信息</string>
    <string name="string_password_modify">修改密码</string>
    <string name="string_clean_cache">缓存清理</string>
    <string name="string_update_version">检查更新</string>
    <string name="string_current_version">当前版本：</string>
    <string name="string_qr">移动客户端下载二维码</string>
    <string name="string_about">关于</string>
    <string name="string_logout">退出当前账号</string>
    <string name="string_login">登录</string>
    <string name="string_register">注册</string>
    <string name="string_lost_password">忘记密码?</string>
    <string name="string_login_username_hint">手机号/用户名/绑定邮箱</string>
    <string name="string_login_password_hint">密码</string>
    <string name="string_login_auth_hint">使用其他帐号登录</string>
    <string name="string_login_change_account">切换帐号</string>
    <string name="string_settings_origin_password_hint">原书密码</string>
    <string name="string_settings_new_password_hint">新密码</string>
    <string name="string_settings_new_password_repeat_hint">确认新密码</string>
    <string name="string_settings_new_password_common">6-16个字符;由字母数字下划线组成,并且以英文字母开头</string>
    <string name="string_settings_modify_password_sure">确认修改</string>


</resources>
